[package]
name = "dagger_os"
version = "0.1.0"
authors = ["Hunter Bashaw <hunter@blivet.sh>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
multiboot2 = "0.1.0"
volatile = "0.2.3"
rlibc = "1.0"
spin = "0.4.6"
bitflags = "0.9.1"

[dev-dependencies]
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic="abort"

[profile.release]
panic="abort"
